--- a/.github/workflows/CrossRefCheckWithAnchors.yml
+++ b/.github/workflows/CrossRefCheckWithAnchors.yml
@@ -9,4 +9,4 @@ jobs:
   crossref-check-with-anchors:
     uses: Open-Systems-Pharmacology/Workflows/.github/workflows/MarkdownCrossrefCheck_withAnchors.yml@main
     with:
-      folder-path: 'Evaluation/report'
+      folder-path: 'Qualification/report'
