--- a/.github/workflows/CrossRefCheckWithAnchors.yml
+++ b/.github/workflows/CrossRefCheckWithAnchors.yml
@@ -2,11 +2,9 @@ name: CrossRefCheck with Anchors
 
 on: 
   push:
-    branches:
-      - review
 
 jobs:
   crossref-check-with-anchors:
     uses: Open-Systems-Pharmacology/Workflows/.github/workflows/MarkdownCrossrefCheck_withAnchors.yml@main
     with:
-      folder-path: 'Evaluation/report'
+      folder-path: 'Qualification/report'
