--- a/.github/workflows/MarkdownLinksCheck.yml
+++ b/.github/workflows/MarkdownLinksCheck.yml
@@ -2,11 +2,9 @@ name: Check Markdown links
 
 on: 
   push:
-    branches:
-      - review
  
 jobs:
   markdown-link-check:
     uses: Open-Systems-Pharmacology/Workflows/.github/workflows/MarkdownLinksCheck.yml@main
     with:
-      folder-path: 'Evaluation/report'
+      folder-path: 'Qualification/report'
